--- a/src/app/views/secure/branches/branches-edit/branch-edit.component.html
+++ b/src/app/views/secure/branches/branches-edit/branch-edit.component.html
@@ -1,6 +1,6 @@
 <div class="d-flex justify-content-center">
   <form
-    [formGroup]="editUserForm"
+    [formGroup]="editBranchForm"
     (submit)="onFormSubmit()"
     class="mt-3 w-75"
     autocomplete="off"
@@ -27,7 +27,7 @@
           </div>
           <div class="col order-2 text-end">
             <app-loading-button
-              [disabled]="editUserForm.invalid"
+              [disabled]="editBranchForm.invalid"
               [buttonText]="'Edit Branch'"
               [title]="'Click to edit branch'"
               [isLoading]="isLoading"
@@ -102,7 +102,7 @@
             >
               <small
                 class="text-danger"
-                *ngIf="formControls['address'].errors?.['required']"
+                *ngIf="formControls['address'].errors?.['required'] || formControls['address'].errors?.['pattern']"
                 >address is required</small
               >
               <small
@@ -115,7 +115,7 @@
           </div>
           <div class="form-group col-12 col-md-6 mt-4">
             <label for="dl_type"
-              >DLtype <span class="text-danger">*</span></label
+              >DL type <span class="text-danger">*</span></label
             >
             <input
               type="text"
@@ -132,22 +132,26 @@
             >
               <small
                 class="text-danger"
-                *ngIf="formControls['dl_type'].errors?.['required']"
-                >DLtype is required</small
+                *ngIf="formControls['dl_type'].errors?.['required'] || formControls['dl_type'].errors?.['pattern']"
+                >DL type is required</small
               >
             </div>
           </div>
           <div class="form-group col-12 col-md-6 mt-4">
             <label for="district_id"
-              >DistrictId <span class="text-danger">*</span></label
+              >District Name<span class="text-danger">*</span></label
             >
-            <input
-              type="number"
-              class="form-control"
-              id="district_id"
-              placeholder="Enter DistrictId"
+            <ng-select
+              [items]="districtNamesList"
+              [clearable]="false"
+              [searchable]="true"
+              bindValue="id"
+              bindLabel="name"
+              placeholder="Select District"
               formControlName="district_id"
-            />
+              notFoundText="No branches found"
+            >
+            </ng-select>
             <div
               *ngIf="
                 formControls['district_id'].touched &&
