--- a/src/app/views/secure/branches/branches-list/branches-list.component.html
+++ b/src/app/views/secure/branches/branches-list/branches-list.component.html
@@ -1,4 +1,5 @@
-<div class="mb-4">
+<div class="d-flex justify-content-between mb-4">
+  <h3>Branches</h3>
   <button cButton variant="outline" color="info" routerLink="/branch/add">
     Add Branch
   </button>
@@ -14,10 +15,6 @@
         </th>
         <th scope="col" class="curser-pointer">
           Name
-          <i class="text-info bi"></i>
-        </th>
-        <th scope="col" class="curser-pointer">
-          Address
           <i class="text-info bi"></i>
         </th>
         <th scope="col" class="curser-pointer">
@@ -47,10 +44,9 @@
       </tr>
     </thead>
     <tbody>
-      <tr class="bg-white" *ngFor="let branch of branches; let i=index">
+      <tr class="bg-white" *ngFor="let branch of branches; let i = index">
         <td>{{ serialNo + i }}</td>
         <td>{{ branch.name }}</td>
-        <td>{{ branch.address ? branch.address : "-" }}</td>
         <td>{{ branch.dl_type }}</td>
         <!-- <td>{{ branch.district_id }}</td> -->
         <td>{{ branch.district_name }}</td>
@@ -78,12 +74,11 @@
 </div>
 
 <div class="d-flex justify-content-center mt-5">
-  <div class="spinner-border" role="status" *ngIf="isLoading">
-  </div>
+  <div class="spinner-border" role="status" *ngIf="isLoading"></div>
   <h5 class="text-center mt-5" *ngIf="!isLoading && !branches?.length">
     No list found
   </h5>
-</div> 
+</div>
 
 <div class="d-flex justify-content-around" *ngIf="branches?.length">
   <app-pagination
