--- a/src/app/views/secure/purchase-orders/distribution-details/distribution-details.component.html
+++ b/src/app/views/secure/purchase-orders/distribution-details/distribution-details.component.html
@@ -5,6 +5,9 @@
     color="info"
     (click)="onBackToMaterialDistributionsView()"
   >
+    <span class="min-width-18px">
+      <i class="fa fa-chevron-left" aria-hidden="true"></i>
+    </span>
     Back
   </button>
 </div>
