User module changes

--- a/src/app/shared/components/model/model.component.html
+++ b/src/app/shared/components/model/model.component.html
@@ -1,4 +1,4 @@
-<c-modal [visible]="true">
+<c-modal [visible]="true" backdrop="static">
   <c-modal-header>
     <h5 cModalTitle>Delete</h5>
     <button cButtonClose (click)="onClose()"></button>
