--- a/src/app/views/secure/purchase-orders/po-material-view/po-material-view.component.html
+++ b/src/app/views/secure/purchase-orders/po-material-view/po-material-view.component.html
@@ -223,6 +223,7 @@
             <div class="d-flex gap-3">
               <div
                 class="btn-view opacity-75 rounded-circle px-2 py-1 text-white fw-bolder curser-pointer"
+                title="View"
                 (click)="onViewMaterialDistributionDetails(material.id)"
               >
                 <i class="bi bi-eye-fill"></i>
