--- a/src/app/views/secure/purchase-orders/purchase-orders-list/purchase-orders-list.component.html
+++ b/src/app/views/secure/purchase-orders/purchase-orders-list/purchase-orders-list.component.html
@@ -12,7 +12,7 @@
   </button>
 </div>
 <div class="table-responsive">
-  <table class="table table-hover  text-center">
+  <table class="table table-hover text-center">
     <thead class="bg-secondary">
       <tr>
         <th scope="col">S No</th>
@@ -49,6 +49,7 @@
           <div class="d-flex gap-3 justify-content-center">
             <button
               class="btn-view opacity-75 rounded-circle px-2 py-1 text-white fw-bolder curser-pointer view-button"
+              title="View"
               (click)="onView(po.id)"
             >
               <i class="bi bi-eye-fill"></i>
