--- a/src/app/views/secure/purchase-orders/purchase-orders-list/purchase-orders-list.component.scss
+++ b/src/app/views/secure/purchase-orders/purchase-orders-list/purchase-orders-list.component.scss
@@ -1,8 +1,17 @@
 .btn-view {
   background: #89f3b3;
-  i {
+  transition: all 0.2s ease-in-out;
+  .bi-eye-fill {
     color: #078439;
   }
+}
+
+.view-button:hover {
+  background-color: #078439;
+  cursor: pointer;
+}
+.view-button:hover i {
+  color: white;
 }
 
 .bg-edit {
@@ -24,11 +33,11 @@
 }
 
 select {
-  font-size: 16px; 
-  padding: 4px; 
-  border-radius: 4px; 
-  border: 1px solid #ccc; 
+  font-size: 16px;
+  padding: 4px;
+  border-radius: 4px;
+  border: 1px solid #ccc;
   background-color: #fff;
-  color: #333; 
+  color: #333;
   cursor: pointer;
 }
