--- a/src/app/views/secure/users/users-list/users-list.component.html
+++ b/src/app/views/secure/users/users-list/users-list.component.html
@@ -1,4 +1,5 @@
-<div class="mb-4">
+<div class="mb-4 d-flex justify-content-between">
+  <h3>Users</h3>
   <button cButton variant="outline" color="info" (click)="onAddUser()">
     Add User
   </button>
@@ -22,17 +23,8 @@
           Role<i class="text-info bi"></i>
         </th>
         <th scope="col" class="curser-pointer">
-          Branch Id<i class="text-info bi"></i>
-        </th>
-        <th scope="col" class="curser-pointer">
           Branch Name<i class="text-info bi"></i>
         </th>
-        <!-- <th scope="col" class="curser-pointer">
-          Created At<i class="text-info bi"></i>
-        </th>
-        <th scope="col" class="curser-pointer">
-          Updated At<i class="text-info bi"></i>
-        </th> -->
         <th scope="col">Actions</th>
       </tr>
     </thead>
@@ -44,29 +36,22 @@
         </td>
         <td>{{ user.email }}</td>
         <td>{{ user.role }}</td>
-        <td>{{ user.branch_id }}</td>
         <td>{{ user.branch_name }}</td>
-        <!-- <td>{{ user.created_at | date : "short" }}</td>
-        <td>{{ user.updated_at | date : "short" }}</td> -->
         <td>
           <div class="d-flex gap-3 justify-content-center">
-            <!-- <div
-              class="btn-view opacity-75 rounded-circle px-2 py-1 text-white fw-bolder curser-pointer"
-              (click)="onView(user.email)"
-            >
-              <i class="bi bi-eye-fill"></i>
-            </div> -->
             <div
               class="bg-edit opacity-75 rounded-circle px-2 py-1 text-white fw-bolder curser-pointer"
+              title="Edit"
               (click)="onEdit(user.id)"
             >
-              <svg cIcon name="cilPencil" size="md" title="Edit Icon"></svg>
+              <svg cIcon name="cilPencil" size="md"></svg>
             </div>
             <div
               class="bg-delete opacity-75 rounded-circle px-2 py-1 text-white fw-bolder curser-pointer"
+              title="Delete"
               (click)="onDelete(user)"
             >
-              <svg cIcon name="cilTrash" size="md" title="Delete Icon"></svg>
+              <svg cIcon name="cilTrash" size="md"></svg>
             </div>
           </div>
         </td>
@@ -76,12 +61,11 @@
 </div>
 
 <div class="d-flex justify-content-center mt-5">
-  <div class="spinner-border" role="status" *ngIf="isLoading">
-  </div>
+  <div class="spinner-border" role="status" *ngIf="isLoading"></div>
   <h5 class="text-center mt-5" *ngIf="!isLoading && !users?.length">
     No list found
   </h5>
-</div> 
+</div>
 
 <div class="d-flex" *ngIf="users?.length">
   <app-pagination
