Fix: Date short | bugs

--- a/src/app/containers/default-header/default-header.component.html
+++ b/src/app/containers/default-header/default-header.component.html
@@ -7,7 +7,7 @@
     <ul class="header-nav me-auto ms-5">
       <li class="nav-item active">
         <a
-          class="nav-link fw-bold"
+          class="nav-link nav-route-item"
           routerLink="/purchase_orders"
           routerLinkActive="active"
           >Purchase Orders</a
@@ -15,7 +15,7 @@
       </li>
       <li class="nav-item active ms-4">
         <a
-          class="nav-link fw-bold"
+          class="nav-link nav-route-item"
           routerLink="/users"
           routerLinkActive="active"
           >Users</a
@@ -23,7 +23,7 @@
       </li>
       <li class="nav-item ms-4">
         <a
-          class="nav-link fw-bold"
+          class="nav-link nav-route-item"
           routerLink="/branches"
           routerLinkActive="active"
           >Branches</a
