--- a/src/app/views/public/authentication/login/login.component.scss
+++ b/src/app/views/public/authentication/login/login.component.scss
@@ -38,6 +38,9 @@
     border-top-right-radius: 0px;
     border-bottom-right-radius: 0px;
   }
+  .password-icon {
+    cursor: pointer;
+  }
 }
 
 @media screen and (max-width: 768px) {
