--- a/src/app/views/secure/branches/branches-list/branches-list.component.html
+++ b/src/app/views/secure/branches/branches-list/branches-list.component.html
@@ -1,6 +1,6 @@
 <div class="d-flex justify-content-between mb-4">
   <h3>Branches</h3>
-  <button cButton variant="outline" color="info" routerLink="/branch/add">
+  <button cButton variant="outline" color="info" routerLink="/branches/add">
     Add Branch
   </button>
 </div>
