--- a/src/app/views/secure/purchase-orders/distribution-details/distribution-details.component.html
+++ b/src/app/views/secure/purchase-orders/distribution-details/distribution-details.component.html
@@ -140,7 +140,7 @@
           <td>
             {{
               materialDistributionDetails.book_receipt_voucher.brv_date
-                | date : "short"
+                | date : "dd/MM/yyyy"
             }}
           </td>
           <td>
