--- a/src/app/views/secure/purchase-orders/po-material-view/po-material-view.component.html
+++ b/src/app/views/secure/purchase-orders/po-material-view/po-material-view.component.html
@@ -181,7 +181,8 @@
       <h6>
         Target Date:<span class="text-primary">
           {{
-            materialDistributionList.purchaseOrder.target_date | date : "short"
+            materialDistributionList.purchaseOrder.target_date
+              | date : "dd/MM/yyyy"
           }}</span
         >
       </h6>
