--- a/src/app/views/public/authentication/login/login.component.html
+++ b/src/app/views/public/authentication/login/login.component.html
@@ -37,14 +37,14 @@
             placeholder="Password"
             autocomplete="current-password"
           />
-          <div class="input-group-append">
+          <div class="input-group-append password-icon">
             <i
               class="input-group-text fa h-100 d-flex justify-content-center align-items-center icon-border-radius"
               [ngClass]="isShowPassword ? 'fa-eye-slash' : 'fa-eye'"
               (click)="passwordIconToggle()"
               aria-hidden="true"
               data-toggle="tooltip"
-              [title]="isShowPassword ? 'Hide password' : 'Show password'"
+              [title]="isShowPassword ? 'Show password' : 'Hide password'"
             ></i>
           </div>
         </div>
@@ -73,7 +73,7 @@
           color="primary"
           type="submit"
           class="col-7 col-lg-5"
-          [disabled]="loginForm.invalid"
+          [disabled]="loginForm.invalid || isLoading"
         >
           <span *ngIf="!isLoading">Sign in</span>
           <span *ngIf="isLoading">Signing in</span>
