--- a/src/app/views/secure/purchase-orders/purchase-order-view/po-view.component.html
+++ b/src/app/views/secure/purchase-orders/purchase-order-view/po-view.component.html
@@ -27,7 +27,7 @@
     <h6>
       PO Date:
       <span class="text-primary">{{
-        purchaseOrder.po_date | date : "short"
+        purchaseOrder.po_date | date : "dd/MM/yyyy"
       }}</span>
     </h6>
   </div>
@@ -77,7 +77,7 @@
   <div class="col-12 col-sm-8 col-md-6 col-lg-5">
     <h6>
       Target Date:<span class="text-primary">
-        {{ purchaseOrder.target_date | date : "short" }}</span
+        {{ purchaseOrder.target_date | date : "dd/MM/yyyy" }}</span
       >
     </h6>
   </div>
