--- a/src/app/views/secure/purchase-orders/purchase-orders-list/purchase-orders-list.component.html
+++ b/src/app/views/secure/purchase-orders/purchase-orders-list/purchase-orders-list.component.html
@@ -24,7 +24,7 @@
             <option value="All">All</option>
             <option value="none">None</option>
             <option value="partial">Partial</option>
-            <option value="completed">Completed</option>
+            <option value="full">Full</option>
           </select>
         </th>
         <th scope="col">Vendor Name</th>
@@ -39,12 +39,12 @@
       <tr class="bg-white" *ngFor="let po of poList; let i = index">
         <td>{{ i + serialNo }}</td>
         <td>{{ po.po_no }}</td>
-        <td>{{ po.po_date | date : "short" }}</td>
+        <td>{{ po.po_date | date : "dd/MM/yyyy" }}</td>
         <td>{{ po.status }}</td>
         <td>{{ po.vendor_name }}</td>
         <td>{{ po.po_days }}</td>
         <td>{{ po.order_year }}</td>
-        <td>{{ po.target_date | date : "short" }}</td>
+        <td>{{ po.target_date | date : "dd/MM/yyyy" }}</td>
         <td>
           <div class="d-flex gap-3 justify-content-center">
             <button
