--- a/src/app/views/secure/purchase-orders/distribution-details/distribution-details.component.html
+++ b/src/app/views/secure/purchase-orders/distribution-details/distribution-details.component.html
@@ -5,6 +5,9 @@
     color="info"
     (click)="onBackToMaterialDistributionsView()"
   >
+    <span class="min-width-18px">
+      <i class="fa fa-chevron-left" aria-hidden="true"></i>
+    </span>
     Back
   </button>
 </div>
@@ -137,7 +140,7 @@
           <td>
             {{
               materialDistributionDetails.book_receipt_voucher.brv_date
-                | date : "short"
+                | date : "dd/MM/yyyy"
             }}
           </td>
           <td>
