--- a/src/app/views/secure/purchase-orders/po-material-view/po-material-view.component.html
+++ b/src/app/views/secure/purchase-orders/po-material-view/po-material-view.component.html
@@ -1,11 +1,14 @@
 <div class="mb-3">
   <button cButton variant="outline" color="info" (click)="onBackToPOView()">
+    <span class="min-width-18px">
+      <i class="fa fa-chevron-left" aria-hidden="true"></i>
+    </span>
     Back
   </button>
 </div>
 
 <div *ngIf="!isLoading && materialDistributionList">
-  <h3 class="mb-3">Purchase Order Details</h3>
+  <!-- <h3 class="mb-3">Purchase Order Details</h3>
   <div
     class="mb-3 gap-3 row d-flex align-items-center"
     *ngIf="!isLoading && materialDistributionList"
@@ -97,7 +100,7 @@
       </h6>
     </div>
   </div>
-  <hr />
+  <hr /> -->
 
   <h3 class="mb-3 mt-4">Material Details</h3>
 
@@ -178,7 +181,8 @@
       <h6>
         Target Date:<span class="text-primary">
           {{
-            materialDistributionList.purchaseOrder.target_date | date : "short"
+            materialDistributionList.purchaseOrder.target_date
+              | date : "dd/MM/yyyy"
           }}</span
         >
       </h6>
