--- a/src/app/views/secure/purchase-orders/purchase-order-view/po-view.component.html
+++ b/src/app/views/secure/purchase-orders/purchase-order-view/po-view.component.html
@@ -1,8 +1,13 @@
 <div class="mb-4">
   <button cButton variant="outline" color="info" (click)="onBack()">
+    <span class="min-width-18px">
+      <i class="fa fa-chevron-left" aria-hidden="true"></i>
+    </span>
     Back
   </button>
 </div>
+
+<h3 class="mb-3">Purchase Order Details:</h3>
 
 <div
   class="mb-3 gap-3 row d-flex align-items-center"
@@ -22,7 +27,7 @@
     <h6>
       PO Date:
       <span class="text-primary">{{
-        purchaseOrder.po_date | date : "short"
+        purchaseOrder.po_date | date : "dd/MM/yyyy"
       }}</span>
     </h6>
   </div>
@@ -44,9 +49,9 @@
   </div>
   <div class="col-12 col-sm-8 col-md-6 col-lg-5 d-flex">
     <h6>
-      Vendor Name: <span class="text-primary">{{ purchaseOrder.vendor_name }}</span>
+      Vendor Name:
+      <span class="text-primary">{{ purchaseOrder.vendor_name }}</span>
     </h6>
-    
   </div>
   <div class="col-12 col-sm-8 col-md-6 col-lg-5">
     <h6>
@@ -72,13 +77,13 @@
   <div class="col-12 col-sm-8 col-md-6 col-lg-5">
     <h6>
       Target Date:<span class="text-primary">
-        {{ purchaseOrder.target_date | date : "short" }}</span
+        {{ purchaseOrder.target_date | date : "dd/MM/yyyy" }}</span
       >
     </h6>
   </div>
 </div>
 
-<hr>
+<hr />
 <h3 class="mt-4">Materials:</h3>
 <div class="table-responsive" *ngIf="!isLoading && materialList.length">
   <table class="table table-hover mt-3" *ngFor="let material of materialList">
