Fix-Button Tooltips

--- a/src/app/views/public/authentication/change-password/change-password.component.html
+++ b/src/app/views/public/authentication/change-password/change-password.component.html
@@ -199,6 +199,7 @@
             <button
               class="ms-auto btn btn-primary align-self-center"
               (click)="onBack()"
+              title="Click to go back"
             >
               Back
             </button>
