--- a/src/app/views/secure/purchase-orders/distribution-details/distribution-details.component.html
+++ b/src/app/views/secure/purchase-orders/distribution-details/distribution-details.component.html
@@ -4,6 +4,7 @@
     variant="outline"
     color="info"
     (click)="onBackToMaterialDistributionsView()"
+    title="Click to go back"
   >
     <span class="min-width-18px">
       <i class="fa fa-chevron-left" aria-hidden="true"></i>
