--- a/src/app/views/secure/users/users-list/users-list.component.html
+++ b/src/app/views/secure/users/users-list/users-list.component.html
@@ -1,6 +1,12 @@
 <div class="mb-4 d-flex justify-content-between">
   <h3>Users</h3>
-  <button cButton variant="outline" color="info" (click)="onAddUser()">
+  <button
+    cButton
+    variant="outline"
+    color="info"
+    (click)="onAddUser()"
+    title="Click to add user"
+  >
     Add User
   </button>
 </div>
