--- a/src/app/views/secure/purchase-orders/po-material-view/po-material-view.component.html
+++ b/src/app/views/secure/purchase-orders/po-material-view/po-material-view.component.html
@@ -1,5 +1,11 @@
 <div class="mb-3">
-  <button cButton variant="outline" color="info" (click)="onBackToPOView()">
+  <button
+    cButton
+    variant="outline"
+    color="info"
+    (click)="onBackToPOView()"
+    title="Click to go back"
+  >
     <span class="min-width-18px">
       <i class="fa fa-chevron-left" aria-hidden="true"></i>
     </span>
