Fix- Edit branch

--- a/src/app/views/secure/purchase-orders/distribution-details/distribution-details.component.html
+++ b/src/app/views/secure/purchase-orders/distribution-details/distribution-details.component.html
@@ -23,7 +23,7 @@
   </h5>
 </div>
 
-<div *ngIf="materialDistributionDetails.material_delivery.id && !isLoading">
+<div *ngIf="materialDistributionDetails?.material_delivery?.id && !isLoading">
   <h3 class="mt-2 mb-2">Material Delivery Details</h3>
   <div
     class="table-responsive mt-3"
