--- a/src/app/views/secure/purchase-orders/po-material-view/po-material-view.component.scss
+++ b/src/app/views/secure/purchase-orders/po-material-view/po-material-view.component.scss
@@ -1,6 +1,7 @@
 .btn-view {
   background: #89f3b3;
   transition: all 0.2s ease-in-out;
+  border: none;
   i {
     color: #078439;
   }
@@ -11,4 +12,8 @@
 }
 .curser-pointer:hover i {
   color: white;
+}
+
+*:disabled {
+  background: lightgray;
 }
