--- a/src/app/views/secure/branches/branches-edit/branch-edit.component.html
+++ b/src/app/views/secure/branches/branches-edit/branch-edit.component.html
@@ -27,7 +27,7 @@
           </div>
           <div class="col order-2 text-end">
             <app-loading-button
-              [disabled]="editBranchForm.invalid"
+              [disabled]="editBranchForm.invalid || editBranchForm.pristine"
               [buttonText]="'Edit Branch'"
               [title]="'Click to edit branch'"
               [isLoading]="isLoading"
@@ -91,7 +91,7 @@
               id="address"
               formControlName="address"
               class="form-control"
-              maxlength="100"
+              maxlength="200"
               placeholder="Enter address"
             />
             <div
