fixed-margin-top

--- a/src/app/views/secure/purchase-orders/distribution-details/distribution-details.component.html
+++ b/src/app/views/secure/purchase-orders/distribution-details/distribution-details.component.html
@@ -214,7 +214,7 @@
     >
       <img
         [src]="imageUrl"
-        alt="material_delivery-image"
+        alt="material-image"
         class="voucher-image"
         (click)="openModal(materialImage)"
         *ngIf="materialDistributionDetails.material_delivery.material_image_url"
@@ -223,7 +223,7 @@
         <div class="text-center">
           <img
             [src]="imageUrl"
-            alt="material_delivery-image"
+            alt="material-image"
             class="voucher-image-model"
           />
         </div>
